--- a/et2.tex
+++ b/et2.tex
@@ -1,4 +1,4 @@
-% Created 2023-05-18 Thu 22:33
+% Created 2023-05-25 Thu 09:31
 \documentclass[9pt, b5paper]{article}
 \usepackage{xeCJK}
 \usepackage[T1]{fontenc}
@@ -1441,7 +1441,7 @@ public abstract class ConfigSingleton<T>: ProtoObject, ISingleton where T: Confi
     public virtual void Dispose() { }
 }
 \end{minted}
-\subsection{StartProcessConfigCategory : ConfigSingleton<StartProcessConfigCategory>, IMerge: 吃饱了撑得吗？}
+\subsection{StartProcessConfigCategory : ConfigSingleton<StartProcessConfigCategory>, IMerge:}
 \label{sec-7-2}
 \begin{itemize}
 \item 当数据库集群成区服的形式，这里各服务器的配置，成了 ProtoBuf 里进程间可传的消息模式？。。。
