--- a/ET.org
+++ b/ET.org
@@ -1194,7 +1194,7 @@ public static class SceneFactory {
         clientScene.AddComponent<ObjectWait>();
         clientScene.AddComponent<PlayerComponent>(); // <<<<<<<<<<<<<<<<<<<< 【客户端】玩家小单元，为客户端场景绑定当前玩家 
 
-        EventSystem.Instance.Publish(clientScene, new EventType.AfterCreateClientScene()); // 好奇葩的事件，去看下
+        EventSystem.Instance.Publish(clientScene, new EventType.AfterCreateClientScene()); 
         return clientScene;
     }
     public static Scene CreateCurrentScene(long id, int zone, string name, CurrentScenesComponent currentScenesComponent) {
